meShaderEd changes log

version 0.3.3 (?? Aug 2013)
  - Shader parameters names exported as (NodeLabel)_(ParamLabel)
  - parameters names with provider == 'primitive' exported as (ParamLabel)

version 0.3.2 (16 Jul 2013)
  - "Fit All", "Fit Selected" actions implemented.
  - CTRL+LMB on node parameter changes attribute "shaderParam" (white color for "shaderParam == True")
  - CTRL+RMB toogles parameter provider "primitive"/"internal" (orange color for "primitive")
  - ALT+LMB parameter toogles detail "uniform/varying" (italic for "varying") 
  - Added ToolButton for show/hide connected parameter in NodeParamView
  - NodeParamView has tabs for "Input", "Output" parameters
  - NodeParamView header control for resizing labels column
  - Parameters label can be edited by LMB+DblClick

version 0.3.1 (10 Jun 2013)
  - ControlParam with special <control_code> section in XML, that allows to execute
    python code for dynamic parameters manipulation 
  - ShaderInfo class for parsing compiled shaders parameters
  - Lib/RIB/shaders/ReadShader.xml node that uses ShaderInfo call inside <control_code> section
    for reloading shader parameters
  - NodeParam new attributes : enabled, spaceDef, arraySize, defaultArray, valueArray 
    (though arrays parameters support is not fully implemented yet...)
    btext (button text for button ControlParam)
    removable (for removing dynamcally added parameters as in read_shader.xml example)
  - Fixed some shading nodes, code, shaders and textures for Air, Aqsis, Pixie and RenderDotC compatibility 
  - Tested on PyQt 4.10.2 that was linked with Qt 5.0.2 libraries.
  - New service nodes in Library
  
version 0.3.0 (16 Apr 2013)
  SwatchNode for image preview in shading network
  Duplicate nodes with links
  Clipboard (Copy/Cut/Paste) operations in XML format
  NodeEditor saves changes to node.
  Texture patterns and fractals from ShadeTree colection added to Library.

version 0.2.9 (5 Apr 2013)
  TextParam widget